--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@
         html, body {
             height: 100%;
             margin: 0;
+            padding: 0;
         }
 
        body {
@@ -78,9 +79,6 @@
             padding: 2.5vw 0;
         }
 
-        header {
-             background-color: rgb(54, 54, 150);
-        }
 
         header h1 {
             width: 100%;        /* full width */
