--- a/css/styles.css
+++ b/css/styles.css
@@ -121,11 +121,61 @@
         padding: 0;
         /* remove internal padding */
     }
+
+    .mainPresentation{
+        max-width: 900px;
+        margin: auto; 
+        font-family: sans-serif; 
+        padding: 20px;
+    }
+
+    .sectionCover{
+        text-align: center; 
+        margin-bottom: 30px;
+        padding-bottom: 2vw;
+        
+    }
+
+    .cover-image {
+    width: 40vw;        /* 80% of the viewport width */
+    max-width: 700px;  /* cap the max size */
+    height: auto;       /* maintain aspect ratio */
+    border-radius: 10px;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+    }
+
+    /* Section styling */
+.screenshots {
+    margin-bottom: 30px;
+    text-align: center;
+    padding-bottom: 2vw;
 }
+
+/* Table styling */
+.screenshots-table {
+    margin: auto;
+    border-spacing: 15px;
+}
+
+/* Images inside the table */
+.screenshots-table img {
+    width: 25vw;
+    height: 20vw;
+    height: auto;
+    border-radius: 8px;
+}
+
+/* Captions under each image */
+.screenshots-table p {
+    font-size: 0.9em;
+    margin-top: 5px;
+}
+
 
 nav a {
     font-size: 18px;
     /* default */
+}
 }
 
 @media (max-width: 1024px) {
